@@ -160,17 +160,25 @@ define(function (require) {
                     // If souls collide custom events are triggered based on souls name.
                     if (soul1 !== soul2) {
                         if (physicsAssistant.soulsCollision(soul1, soul2)) {
+                            // Trigger event for name - name
                             this.trigger("collision_" + soul1.getName() + "_" + soul2.getName(), soul1, soul2);
 
-                            // Trigger event based on collision group for body
+                            // Trigger event for name - group
                             if (soul2.getBody().collisionGroup !== undefined) {
                                 this.trigger("collision_" + soul1.getName() + "_" + soul2.getBody().collisionGroup, soul1, soul2);
+
+                                // Trigger event for group - group
+                                if (soul1.getBody().collisionGroup !== undefined) {
+                                    this.trigger("collision_" + soul1.getBody().collisionGroup + "_" + soul2.getBody().collisionGroup, soul1, soul2);
+                                }
                             }
                         }
                     }
                 }
             }
         }
+
+        this.trigger('after_update', dt);
 
         elapsedTime = now;
     };
