@@ -5,6 +5,8 @@ Game
 ----
 
 * Merged render and update loop. Using request animation frame method.
+* Trigger event for collision group for both bodies. Ex: collision_bullets_asteroids
+* Trigger event for after update function
 
 RenderAssistant
 ---------------
